--- a/gtk-3.0/widgets/_sidebar.scss
+++ b/gtk-3.0/widgets/_sidebar.scss
@@ -39,7 +39,6 @@
       &.view{
         transition: all .12s ease-in;
         &:selected {
-          padding-left: 4px;
           background: transparentize(darken($main_dark_color, 5%), 0.5);
           color: $selected_fg_color;
           &:active { box-shadow: inset 0 2px 3px -1px transparentize(black, 0.5); }
